--- a/contact-info.html
+++ b/contact-info.html
@@ -5,27 +5,23 @@
     <title>Contact Info</title>
   </head>
   <body>
-    <h1><<strong>Contact Information</strong></h1>
-    <<h2><<strong>Cell</strong></h2>
-    <<p><<em>432-238-9551</em></p>
-    <p><h2><<strong>Email</strong></h2></p>
-    <<p><<em>Michaelbwilson2012@gmail.com</em></p>
-    <<h2><<strong>LinkdIn</strong></h2>
-    <<a href="https://www.linkedin.com/in/michael-wilson-010631170/">LinkdIn Profile</a><<br>
-      <<hr size="3" noshade>
-      <<label><<strong><<h2>Email Me</h2></strong></label>
-<<form class="" action="<a href="mailto:michaelbwilson2012@gmail.com?subject=feedback method="post"></a>
-
-
-
-
-      <<label>Your Name:</label><br>
-    <<input type="text" name="" value=""><<br>
-      <<label>Your Email:</label><br>
-      <<input type="email" name="" value=""><<br>
-      <<label>Your Message:</label><br>
-      <<textarea name="name" rows="10" cols="30"></textarea><br>
-      <<input type="submit" name="" value="">
+    <h1><strong>Contact Information</strong></h1>
+    <h2><strong>Cell</strong></h2>
+    <p><em>432-238-9551</em></p>
+    <p><h2><strong>Email</strong></h2></p>
+    <p><em>Michaelbwilson2012@gmail.com</em></p>
+    <h2><strong>LinkdIn</strong></h2>
+    <a href="https://www.linkedin.com/in/michael-wilson-010631170/">LinkdIn Profile</a><br>
+      <hr size="3" noshade>
+      <label><strong><h2>Email Me</h2></strong></label>
+<form action="mailto:michaelbwilson2012@gmail.com" method="POST"></a>
+      <label>Your Name:</label><br>
+    <input type="text" name="" value=""><br>
+      <label>Your Email:</label><br>
+      <input type="email" name="" value=""><br>
+      <label>Your Message:</label><br>
+      <textarea name="name" rows="10" cols="30"></textarea><br>
+      <input type="submit" name="" value="Submit">
 
 
     </form>
